syntax = "proto3";

package gophkeeper.v1;

import "google/protobuf/empty.proto";

option go_package = "/pb";

service UserService {
  rpc Register (RegisterUserRequest) returns (RegisterUserResponse);
  rpc Login (LoginUserRequest) returns (LoginUserResponse);
  rpc Update (UpdateUserRequest) returns (google.protobuf.Empty);
}

// Модель пользователя.
message User {
  int32 id = 1;
  string login = 2;
}

// Регистрация пользователя.
message RegisterUserRequest {
  string login = 1;
  string password = 2;
}

message RegisterUserResponse {
  User user = 1;
}

// Аутентификация пользователя.
message LoginUserRequest {
  string login = 1;
  string password = 2;
}

message LoginUserResponse {
  User user = 1;
}

// Обновление пользователя.
message UpdateUserRequest {
  string new_login = 1;
  string old_password = 2;
  string new_password = 3;
}